# xrr_notebooks

./: .gitattributes  .gitignore  PANEL_MIGRATION_GUIDE.md  fixed_angle.ipynb  mcmc_checkpoint.h5  modeling.ipynb  panel.ipynb  pyproject.toml  vis.ipynb  xray_compounds.py
data_collection/: ScriptGen.ipynb  Total Results.ipynb  config.yaml  l_edge.txt  nexafs_macros.ipynb  o_k_nexafs.txt  prototype copy.ipynb  prototype.ipynb  runfile.py  test_sg.ipynb
dft_sorted/: ZnPc_OC.csv  steps.csv  test.ipynb  znpc_params.csv  znpc_params_cluster.csv
fitting/: Logp.py  anisotropy param evaluation.ipynb  anisotropy_weight_scan.csv  anisotropy_weight_scan_dft.csv  average_difference_spectrum.csv  average_difference_spectrum_exp.csv  data_cleaning.ipynb  dft_nexafs.csv  dft_profile.ipynb  dft_raw_oocs.csv  example_fit.sh  fit_with_old_model.py  fitting dynamics.ipynb  fitting free model.ipynb  fitting many slabs.ipynb  fitting_refined.ipynb  fitting_results_fixed_3.pkl  fitting_results_free_model.pkl  fitting_results_profile_free.pkl  general_fitting.ipynb  helper.py  june_processed.parquet  mle_analysis.ipynb  model_fit_script.py  normalized_dft_nexafs.csv  normalized_nexafs.csv  normalized_optical_constants.csv  optical constant analysis.ipynb  optical_constants.csv  optical_constants_beta.csv  optical_constants_beta_exp.csv  optical_constants_exp.csv  raw_dft.csv  refl.parquet  reflectivity_data.parquet  reuse_old.py  runfile_summary.parquet  slds_dict.pkl  step_edge_normalized.csv
giwaxs/: plotting.ipynb
manuscript/: analyze_fitting_comparison.py  anisotropy_comparison.ipynb  clustering comparison.ipynb  fitting_results.ipynb  helper.py  mle_analysis.py  orientation_drag.ipynb
optical models/: C32H16N8Zn.raw  LR_theory_optical_model.ipynb  NEXAFS_SBMA_2s.csv  (+20 more)
(+2888 files in other folders)
