[project]
name = "xrr-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "joypy>=0.2.6",
    "pyrefly>=0.38.2",
    "ridgeplot>=0.5.0",
    "ruff",
    "scienceplots>=2.1.1",
    "uncertainties>=3.2.3",
]


[tool.ruff]
include = ["**/*.py", "**/*.ipynb"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".ipynb_checkpoints",
    "*.egg-info",
]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "T20", "ARG", "PIE", "PLR", "PT", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
    "E402",  # Module level import not at top of file (common in notebooks)
    "F401",  # Imported but unused (common in exploratory notebooks)
    "F811",  # Redefinition of unused (common when re-running cells)
    "T201",  # Print statements (common in notebooks for output)
    "N806",  # Variable in function should be lowercase (scientific notation like Q, R, dR)
    "PLR0913",  # Too many arguments (common in scientific functions)
    "PLR2004",  # Magic value used in comparison (common in notebooks)
]
